change normal html tag to jingja2 format
in login page form and signup page form

--- a/app/templates/home/home.html
+++ b/app/templates/home/home.html
@@ -3,6 +3,7 @@
 {% block title %}Home {% endblock %}
 
 {% block content %}
+    <div id="AlertModalDiv" class="hidden"> </div>
     {% include "/home/categories.html" %}
     <hr>
     {% include "/home/values.html" %}
