--- a/app/templates/users/signup.html
+++ b/app/templates/users/signup.html
@@ -28,37 +28,39 @@
                                     <br /><br />
                                     <h1 class="h4 mb-4">SIGN UP</h1>
                                 </div>
-                                <div id="AlertModalDiv" class="hidden">
-                                </div>
-                                <form class="user" action="{{ url_for('signup') }}" method="POST" 
-                                    data-ajax="true" data-ajax-method="POST" 
-                                    data-ajax-failure="onFailure" data-ajax-success="onSuccess">                             
+                                <div id="AlertModalDiv" class="hidden"></div>
+                                <form class="user" method="POST" action="/signup" onsubmit="return validatePasswordLength()">
+                                    {{ form.hidden_tag() }}
                                     <div class="form-group row">
                                         <div class="col">
-                                            <input class="form-control form-control-user" placeholder="First Name" name="first_name" />
+                                            {{ form.first_name.label(class="form-control-label") }}
+                                            {{ form.first_name(class="form-control form-control-user") }}
                                         </div>
-                                    <div class="col">
-                                        <input class="form-control form-control-user" placeholder="Last Name" name="last_name" />
+                                        <div class="col">
+                                            {{ form.last_name.label(class="form-control-label") }}
+                                            {{ form.last_name(class="form-control form-control-user") }}
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <input class="form-control form-control-user" placeholder="Email Address" name="email_address" />
+                                        {{ form.email_address.label(class="form-control-label") }}
+                                        {{ form.email_address(class="form-control form-control-user") }}
                                     </div>
                                     <div class="form-group">
-                                       <input type="password" class="form-control form-control-user" placeholder="Enter New Password" name="password" />
+                                        {{ form.password.label(class="form-control-label") }}
+                                        {{ form.password(class="form-control form-control-user", id="password") }}
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" class="form-control form-control-user" placeholder="Re-type New Password" name="re-password" />
-                                     </div>
-                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" id="customCheck">
-                                        <label class="form-check-label" for="customCheck">
-                                            Become a seller? <p>
-                                        </label>
+                                        {{ form.re_password.label(class="form-control-label") }}
+                                        {{ form.re_password(class="form-control form-control-user") }}
                                     </div>
-                                     <div class="form-group" id="shopNameGroup" style="display: none;">
-                                        <input type="text" class="form-control form-control-user" id="shopName" placeholder="Shop Name (Optional)" name="shop_name">
-                                    </div>       
+                                    <div class="form-check">
+                                        {{ form.become_seller(class="form-check-input", id="customCheck") }}
+                                        {{ form.become_seller.label(class="form-check-label") }}
+                                    </div>
+                                    <div class="form-group" id="shopNameGroup" style="display: none;">
+                                        {{ form.shop_name.label(class="form-control-label") }}
+                                        {{ form.shop_name(class="form-control form-control-user") }}
+                                    </div>
                                     <button class="btn btn-outline-secondary btn-block" type="submit">Create an account</button>
                                     <hr>
                                     <a href="index" class="btn btn-outline-danger btn-block">
