--- a/app/templates/product/display_list.html
+++ b/app/templates/product/display_list.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="d-flex">
             <div class="col-3">
-                <img src="{{ product.img }}" alt="{{ product.title }}" class="rounded">
+                <img src=/static/img/{{ product.img }} alt="{{ product.title }}" class="rounded">
             </div>
             <div class="ms-2 col-9">
                 <h2 class="text-truncate product-title">{{ product.title }} </h2>
