--- a/app/static/css/product/product.css
+++ b/app/static/css/product/product.css
@@ -18,8 +18,6 @@
 
 .display-products {
   border-radius: 0.375rem;
-  /* height:370px;  */
-  /* 40px - more place for scrollbar, is hidden under parent box */
   padding: 10px;
   white-space:nowrap;
   overflow-x: scroll;
@@ -137,4 +135,103 @@
 
 .display-list span {
   font-size: 15px;
+  }
+  
+  @media (min-width: 1200px) {
+    #productDetail h2,
+    #productDescription h2 {
+      font-size: 34px;
+    }
+    #productDetail .price {
+      font-size: 29px !important;
+    }
+    #productDetail .btn,
+    #productDetail p,
+    #productDescription p {
+      font-size: 19px;
+    }
+    }
+  
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  #productDetail h2,
+  #productDescription h2 {
+    font-size: 31px;
+  }
+  #productDetail .price {
+    font-size: 26px !important;
+  }
+  #productDetail .btn,
+  #productDetail p,
+  #productDescription p {
+    font-size: 16px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  #productDetail h2,
+  #productDescription h2 {
+    font-size: 28px;
+  }
+  #productDetail .price {
+    font-size: 23px !important;
+  }
+  #productDetail .btn,
+  #productDetail p,
+  #productDescription p {
+    font-size: 13px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  #productDetail h2,
+  #productDescription h2 {
+    font-size: 25px;
+  }
+  #productDetail .price {
+    font-size: 20px !important;
+  }
+  #productDetail .btn,
+  #productDetail p,
+  #productDescription p {
+    font-size: 12px ;
+  }
+}
+
+.remarks-details {
+    font-size: 15px;
+    padding: 5px;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+  top: 40%;
+  bottom: 40%;
+  width: 7%;
+}
+
+.carousel-control-prev,
+.carousel-control-next,
+.carousel-indicators {
+  background-color: #333;
+  opacity: 0.35
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  width: 30px;
+  height: 30px;
+}
+
+.carousel-indicators {
+  margin: 0 !important;
+}
+
+.input-as-label {
+  background-color: transparent !important;
+  border: 0 !important;
+}
+
+#ContactSellerModal .row div {
+  margin-top: 0.5rem !important;
+  margin-bottom: 0.5rem !important;
 }
