--- a/app/templates/product/display_card.html
+++ b/app/templates/product/display_card.html
@@ -1,6 +1,6 @@
 <div class="display-card">
     <div class="card">
-        <img class="rounded" src="{{ product.img }}" height="120" alt="{{ product.title }}">
+        <img class="rounded" src=/static/img/{{ product.img }} height="120" alt="{{ product.title }}">
         <div class="card-body">
             <h5 class="d-flex justify-content-start ms-2" style="max-width: 80%;">
                 <span class="text-truncate">
