--- a/app/templates/users/signup.html
+++ b/app/templates/users/signup.html
@@ -79,5 +79,8 @@
             </div>
         </div>
     </div>
+    {% block footer %}
+    {% include '/layout/footer.html' %}
+    {% endblock %}
 </body>
 </html>
