minor UI fix on Icons and Imgs
added spacing between icons, and images when the screen size too large

--- a/app/templates/seller/product_table.html
+++ b/app/templates/seller/product_table.html
@@ -50,8 +50,8 @@
                                     <td>{{ pro.condition }}</td>
                                     <td>
                                         <div class="action-container">
-                                            <button class="edit" title="Edit" onclick="editProduct({{pro.id}})"><span><i class="fa-solid fa-pen-to-square"></i></span></button>
-                                            <button class="delete" title="Delete" onclick="deleteProdcut({{pro.id}})"><span><i class="fa-solid fa-trash-can"></i></span></button>
+                                            <button class="edit ms-2" title="Edit" onclick="editProduct({{pro.id}})"><span><i class="fa-lg fa-solid fa-pen-to-square"></i></span></button>
+                                            <button class="delete ms-2" title="Delete" onclick="deleteProdcut({{pro.id}})"><span><i class="fa-lg fa-solid fa-trash-can"></i></span></button>
                                         </div>
                                     </td>
                                 </tr>
