Minor changes to the div bac-color
As per Lok's suggestion, I have made some changes to make the icon more visible and better-choice color for dark theme.

--- a/app/static/css/dark_site.css
+++ b/app/static/css/dark_site.css
@@ -187,3 +187,8 @@
 .dark_mode i.fa-rounded{
     box-shadow: 0 0 4px #fff;
 }
+
+.dark_mode .input-group-text{
+    background-color: #999;
+    border: 0;
+}
