--- a/app/static/css/site.css
+++ b/app/static/css/site.css
@@ -12,13 +12,17 @@
   color: #858796;
 }
 
+.navbar {
+  margin-bottom: 1.5rem;
+}
+
 .form-control {
   height: calc(1.5em + 0.75rem + 2px);
 }
 
-.form-control::placeholder {
-  color: #d1d3e2;
-}
+  .form-control::placeholder {
+      color: #d1d3e2;
+  }
 
 form.user .form-control-user {
   font-size: 0.8rem;
@@ -38,9 +42,9 @@ form.user .form-control-user {
   width: 100%;
 }
 
-.btn-block + .btn-block {
-  margin-top: 0.5rem;
-}
+  .btn-block + .btn-block {
+      margin-top: 0.5rem;
+  }
 
 .logo {
   color: #858796;
@@ -59,38 +63,42 @@ form.user .form-control-user {
   overflow: hidden;
 }
 
-.topbar .topbar-brand #weather_mode.fa-sun {
-  color: #fdb813;
-}
+  .topbar .topbar-brand #weather_mode.fa-sun {
+      color: #fdb813;
+  }
 
-.topbar .topbar-brand #weather_mode.fa-moon {
-  color: #3aa8c2;
-}
+  .topbar .topbar-brand #weather_mode.fa-moon {
+      color: #3aa8c2;
+  }
 
-.topbar .topbar-brand #weather_mode {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  transform: rotate(137deg) translate(-50px);
-}
+  .topbar .topbar-brand #weather_mode {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      transform: rotate(137deg) translate(-50px);
+  }
 
 @keyframes curvedpath {
   0% {
-    transform: rotate(137deg) translate(-50px);
+      transform: rotate(137deg) translate(-50px);
   }
+
   25% {
-    transform: rotate(227deg) translate(-50px);
+      transform: rotate(227deg) translate(-50px);
   }
+
   50% {
-    transform: rotate(317deg) translate(-50px);
+      transform: rotate(317deg) translate(-50px);
   }
+
   75% {
-    transform: rotate(407deg) translate(-50px);
+      transform: rotate(407deg) translate(-50px);
   }
+
   100% {
-    transform: rotate(497deg) translate(-50px);
+      transform: rotate(497deg) translate(-50px);
   }
 }
 
@@ -133,14 +141,14 @@ form.user .form-control-user {
   opacity: .5;
 }
 
-.btn-close:hover {
-  color: #000;
-  text-decoration: none;
-}
+  .btn-close:hover {
+      color: #000;
+      text-decoration: none;
+  }
 
-.btn-close:not(:disabled):not(.disabled):hover, .btn-close:not(:disabled):not(.disabled):focus {
-  opacity: .75;
-}
+  .btn-close:not(:disabled):not(.disabled):hover, .btn-close:not(:disabled):not(.disabled):focus {
+      opacity: .75;
+  }
 
 button.btn-close {
   padding: 0;
@@ -156,10 +164,10 @@ footer.page-footer {
   box-shadow: 0 .3rem 2rem 0 rgba(58, 59, 69, .15) !important;
 }
 
-.table-card{
+.table-card {
   border-width: 1px;
 }
-  
+
 table.table-bordered th,
 table.table-bordered td {
   border-width: 1px;
@@ -174,13 +182,13 @@ table .checkbox-switch {
   color: #fff;
 }
 
-table .checkbox-switch input[type=checkbox]:checked ~ label:before {
-  content: attr(data-label-on);
-  display: flex;
-  height: 100%;
-  justify-content: flex-start;
-  align-items: center;
-}
+  table .checkbox-switch input[type=checkbox]:checked ~ label:before {
+      content: attr(data-label-on);
+      display: flex;
+      height: 100%;
+      justify-content: flex-start;
+      align-items: center;
+  }
 
 table tr td .checkbox-switch input[type=checkbox] ~ label:before {
   padding: 14px 10px;
@@ -287,4 +295,141 @@ table tr td .action-container .delete {
   background-color: transparent;
   border: 0;
   padding: 0;
+}
+
+
+.standard-form-table-container {
+  display: flex;
+  align-items: flex-start;
+  gap: 20px;
+  margin-bottom: 30px;
+  flex-wrap: wrap;
+}
+
+  .standard-form-table-container .standard-form-table-column {
+      flex-basis: calc(50% - 10px);
+      flex-grow: 1;
+      border: 1px solid #e5e9ea;
+  }
+
+      .standard-form-table-container .standard-form-table-column .standard-form-row {
+          display: flex;
+          align-items: stretch;
+      }
+
+          .standard-form-table-container .standard-form-table-column .standard-form-row:not(:first-child) {
+              border-top: 1px solid #e5e9ea;
+          }
+
+          .standard-form-table-container .standard-form-table-column .standard-form-row .standard-form-label {
+              width: 35%;
+              min-width: 35%;
+              padding: 10px;
+              background-color: #f8f9fd;
+              display: flex;
+              align-items: center;
+              border-right: 1px solid #e5e9ea;
+              font-weight: 800;
+              color: #666;
+          }
+
+          .standard-form-table-container .standard-form-table-column .standard-form-row .standard-form-value {
+              flex-grow: 2;
+              padding: 10px;
+          }
+
+.card-body .inline-form .standard-form-value b {
+  color: #4e73df;
+}
+
+.card-body .inline-form .standard-form-label {
+  margin-right: .35rem;
+}
+
+.form-section .standard-form-value b {
+  color: #4e73df;
+}
+
+.file-upload-group {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.custom-file {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: calc(1.5em + 0.75rem + 2px);
+  margin-bottom: 0;
+}
+
+
+.custom-file-input {
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  height: calc(1.5em + 0.75rem + 2px);
+  margin: 0;
+  overflow: hidden;
+  opacity: 0;
+}
+
+  .custom-file-input:focus ~ .custom-file-label {
+      border-color: #bac8f3;
+      box-shadow: 0 0 0 0.2rem rgba(78, 115, 223, 0.25);
+  }
+
+  .custom-file-input[disabled] ~ .custom-file-label,
+  .custom-file-input:disabled ~ .custom-file-label {
+      background-color: #eaecf4;
+  }
+
+  .custom-file-input:lang(en) ~ .custom-file-label::after {
+      content: "Browse";
+  }
+
+  .custom-file-input ~ .custom-file-label[data-browse]::after {
+      content: attr(data-browse);
+  }
+
+.custom-file-label {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  overflow: hidden;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #6e707e;
+  background-color: #fff;
+  border: 1px solid #d1d3e2;
+  border-radius: 0.35rem;
+}
+
+  .custom-file-label::after {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      z-index: 3;
+      display: block;
+      height: calc(1.5em + 0.75rem);
+      padding: 0.375rem 0.75rem;
+      line-height: 1.5;
+      color: #6e707e;
+      content: "Browse";
+      background-color: #eaecf4;
+      border-left: inherit;
+      border-radius: 0 0.35rem 0.35rem 0;
+  }
+
+.title-details {
+  font-weight: normal;
+  font-style: italic;
+  color: #4e73df;
 }
