--- a/app/templates/layout/nav_bar.html
+++ b/app/templates/layout/nav_bar.html
@@ -27,6 +27,14 @@
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 {% if not hideNav %}
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('seller') }}">
+                            <i class="fa-solid fa-diagram-predecessor"></i> Products
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                {% endif %}
+                {% if not hideNav %}
+                    <li class="nav-item">
                         <a class="nav-link" href="#">
                             <i class="fas fa-bell"></i> Notifications
                         </a>
