--- a/app/templates/seller/product_table.html
+++ b/app/templates/seller/product_table.html
@@ -5,6 +5,11 @@
     <div class="card-body">
         <div id="AlertModalDiv" class="hidden">
         </div>
+        <div class="row">
+            <div class="col-md-12 d-flex justify-content-end mb-2">
+                <a href="/manage_product/add" class="btn btn-primary"><i class="fa-solid fa-plus"></i> Add Product</a>
+            </div>
+        </div>
         <div class="table-responsive">
             <div class="row">
                 <div class="col-sm-12">
