JS formatting changes and minor changes in the page layout
- The JS changes to follow the JQuery format that is shorter and neat
- Adding space between contects on categories and values pages

--- a/app/templates/home/categories.html
+++ b/app/templates/home/categories.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 class="text-center mb-4">Shop range of products</h2>
+  <h2 class="text-center mb-4 mt-3">Shop range of products</h2>
   <div class="row justify-content-center">
     <div class="col-lg-2 col-md-4 col-sm-6 col-12 mb-4 category-body">
       <div class="category text-center border rounded p-3" onclick="location.href='#'" onmouseover="this.classList.add('bg-success')" onmouseout="this.classList.remove('bg-success')">
