--- a/app/templates/home/values.html
+++ b/app/templates/home/values.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="values-container">
-    <h2 class="values-heading text-center">Our Values</h2>
+    <h2 class="values-heading text-center mb-3 mt-3">Our Values</h2>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="value-item border rounded p-3 values-body">
