--- a/app/templates/seller/product_table_child.html
+++ b/app/templates/seller/product_table_child.html
@@ -1,6 +1,40 @@
-<div class="row mb-4">
-    <div class="col-3">
+<div class="row mt-2 mb-2">
+    <div class="col-6">
         <div class="card table-border-left-green shadow h-100 py-2">
+            <div class="card-body row">
+                <div class="col">
+                    <div class="col mr-2">
+                        <div class="text-uppercase mb-1">Description</div>
+                        <span> {{ pro.description }} </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-3">
+        <div class="card table-border-left-blue shadow h-100 py-2 on-hover" onclick="loadOrders({{pro.id}}, '{{ pro.title }}')" data-toggle="modal" data-target="#productOrderModal" style="cursor: pointer;">
+            <div class="card-body row">
+                <div class="col-12">
+                    <div class="underline text-uppercase me-4">
+                        View Order Listing <i class="fa-solid fa-angle-right view-listing"></i>
+                    </div>
+                    <div class="d-flex align-items-start flex-column">
+                        <div class="d-flex mt-2 success col-6">
+                            <span>Success   : 1</span>
+                        </div>
+                        <div class="d-flex mt-2 pending col-6">
+                            <span>Pending   : 1</span>
+                        </div>
+                        <div class="d-flex mt-2 rejected col-6">
+                            <span>Reject    : 1</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-3">
+        <div class="card table-border-left-yellow shadow h-100 py-2">
             <div class="card-body row">
                 <div class="col-12">
                     <div class="col mr-2 mb-2">
@@ -15,20 +49,8 @@
             </div>
         </div>
     </div>
-    <div class="col-9">
-        <div class="card table-border-left-blue shadow h-100 py-2">
-            <div class="card-body row">
-                <div class="col">
-                    <div class="col mr-2">
-                        <div class="text-uppercase mb-1">Description</div>
-                        <span> {{ pro.description }} </span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
-<div class="row mb-4">
+<div class="row mt-4 mb-2">
     <div class="col-12">
         <div class="card table-border-left-red shadow h-100 py-2">
             <div class="card-body row">
