Bug and Func. Improvement
Bug fixed: When trying to upload images, did not upload anything.

Improvement:
- Using predefined values combined with dropdown for "Category" and "Condition" inputs to prevent variations.
- Adding dollar sign "$" on "Price"

--- a/app/static/css/site.css
+++ b/app/static/css/site.css
@@ -466,6 +466,26 @@ i.fa-rounded{
   color: #4e73df;
 }
 
+.custom-file-preview {
+  width: 100px;
+  height: 100px;
+  margin-top: 5px;
+}
+
+.image-preview {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.image-container {
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+.main-image-checkbox {
+  margin-left: 5px;
+}
+
 table tr td .view-listing {
   padding-left: 5px;
 }
