--- a/app/templates/manage_product/add_product.html
+++ b/app/templates/manage_product/add_product.html
@@ -100,7 +100,7 @@
                             </div>
                             <div class="alert alert-info alert-dismissible">
                                 <h5><i class="icon fa fa-info-circle"></i> Information:</h5>
-                                <div class="remarks-details text-small">
+                                <div class="text-xs">
                                     <p class="mb-1">1. Max. 3 Images per Product</p>
                                     <p class="mb-1">2. Tick the box beside the image to set it as the main image.</p>
                                 </div>
