--- a/app/templates/layout/nav_bar.html
+++ b/app/templates/layout/nav_bar.html
@@ -11,7 +11,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                {% if not hideNav %}
+                {% if not current_user.is_anonymous %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Categories
@@ -29,7 +29,7 @@
                 {% endif %}
             </ul>
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                {% if not hideNav %}
+                {% if (not current_user.is_anonymous) and session['is_seller'] %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('seller') }}">
                             <i class="fa-solid fa-diagram-predecessor"></i> Products
@@ -49,7 +49,7 @@
                         <i class="fas fa-moon"></i> <span data-dark="Dark" data-light="Light">Dark</span> Theme
                     </a>
                 </li>
-                {% if not hideNav %}
+                {% if not current_user.is_anonymous %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fa-solid fa-user"></i>
@@ -58,7 +58,7 @@
                             <li><a class="dropdown-item" href="profile">Profile</a></li>
                             <li><a class="dropdown-item" href="#">Account</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="/home">Logout</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a></li>
                         </ul>
                     </li>
                 {% else %}
@@ -67,8 +67,8 @@
                         <i class="fa-solid fa-user"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="/login">Login</a></li>
-                        <li><a class="dropdown-item" href="/signup">Sign Up</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('login') }}">Login</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('signup') }}">Sign Up</a></li>
                     </ul>
                 </li>
                 {% endif %}
