BUG fixed - Become a seller checkbox in signup page
Fixing the issue when page got reloaded, the ShopName textbox not shown eventhough the checkbox is checked or true.

--- a/app/templates/users/signup.html
+++ b/app/templates/users/signup.html
@@ -81,7 +81,7 @@
                                             <span class="text-danger">{{ error }}</span>
                                         {% endfor %}
                                     </div>
-                                    <div class="form-check">
+                                    <div class="form-check mb-3">
                                         {{ form.become_seller(class="form-check-input", id="customCheck") }}
                                         {{ form.become_seller.label(class="form-check-label") }}
                                         {% for error in form.become_seller.errors %}
