include jinja2 format to product form
- jinja2 form in add_product.html
- product.js add href link to product_details.html

--- a/app/templates/manage_product/add_product.html
+++ b/app/templates/manage_product/add_product.html
@@ -2,74 +2,84 @@
     <div class="card-header py-3">
         <h6 class="m-0 font-weight-bold text-primary">Add Product</h6>
     </div>
-    <form id="addProductForm" class="card-body">
+    <form id="addProductForm" class="card-body" action="/manage_product/add" method="POST">
+        {{ form.hidden_tag() }}
         <div id="AlertModalDiv" class="hidden">
+            {% include "/layout/alert_modal.html" %}
         </div>
         <div class="standard-form-table-container">
             <div class="standard-form-table-column">
                 <div class="standard-form-row">
                     <span class="standard-form-label">
-                        Product Name
+                        {{ form.product_name.label }}
                     </span>
                     <span class="standard-form-value">
-                        <input class="form-control" />
+                        {{ form.product_name(class="form-control") }}
+                        {% for error in form.product_name.errors %}
+                            <span class="text-danger">{{ error }}</span>
+                        {% endfor %}
                     </span>
                 </div>
                 <div class="standard-form-row">
                     <span class="standard-form-label">
-                        Category
+                        {{ form.category.label }}
                     </span>
                     <span class="standard-form-value">
                         <div class="input-group">
-                            <select class="form-select" id="inputGroupSelect01">
-                                <option selected>Clothing & Accessories</option>
-                                <option value="1">Home & Garden</option>
-                                <option value="2">Electronics</option>
-                                <option value="3">Other</option>
-                            </select>
+                            {{ form.category(class="form-control") }}
+                            {% for error in form.category.errors %}
+                                <span class="text-danger">{{ error }}</span>
+                            {% endfor %}
                         </div>
                     </span>
                 </div>
                 <div class="standard-form-row">
                     <span class="standard-form-label">
-                        Price
+                        {{ form.price.label }}
                     </span>
                     <span class="standard-form-value">
                         <div class="input-group">
                             <span class="input-group-text">$</span>
-                            <input class="form-control" />
+                            {{ form.price(class="form-control") }}
+                            {% for error in form.price.errors %}
+                                <span class="text-danger">{{ error }}</span>
+                            {% endfor %}
                         </div>
                     </span>
                 </div>
                 <div class="standard-form-row">
                     <span class="standard-form-label">
-                        Condition
+                        {{ form.condition.label }}
                     </span>
                     <span class="standard-form-value">
                         <div class="input-group">
-                            <select class="form-select" id="inputGroupSelect01">
-                                <option selected>Brand New</option>
-                                <option value="1">Used - Good</option>
-                                <option value="2">Used - Fair</option>
-                                <option value="3">Other</option>
-                            </select>
+                            {{ form.condition(class="form-control") }}
+                            {% for error in form.condition.errors %}
+                                <span class="text-danger">{{ error }}</span>
+                            {% endfor %}
                         </div>
                     </span>
                 </div>
                 <div class="standard-form-row">
                     <span class="standard-form-label">
-                        Location
+                        {{ form.location.label }}
                     </span>
                     <span class="standard-form-value">
-                        <input class="form-control" />
+                        {{ form.location(class="form-control") }}
+                        {% for error in form.location.errors %}
+                            <span class="text-danger">{{ error }}</span>
+                        {% endfor %}
                     </span>
                 </div>
                 <div class="standard-form-row">
                     <span class="standard-form-label">
-                        Qty
+                        {{ form.quantity.label }}
                     </span>
                     <span class="standard-form-value">
-                        <input class="form-control" type"number" />
+                        {{ form.quantity(class="form-control", type="number") }}
+                        {% for error in form.quantity.errors %}
+                            <span class="text-danger">{{ error }}</span>
+                        {% endfor %}
                     </span>
                 </div>
             </div>
@@ -112,7 +122,7 @@
             </div>
         </div>
         <div class="d-flex justify-content-end">
-            <input type="submit" value="Add Product" class="btn btn-primary" />
+            {{ form.submit(class="btn btn-primary") }}
         </div>
     </form>
 </div>
