--- a/app/templates/product/display_card.html
+++ b/app/templates/product/display_card.html
@@ -1,4 +1,4 @@
-<div class="display-card">
+<div class="display-card" data-id="{{ product.id }}">
     <div class="card">
         <img class="rounded" src=/static/img/{{ product.img }} height="120" alt="{{ product.title }}">
         <div class="card-body">
