--- a/app/templates/product/display_card.html
+++ b/app/templates/product/display_card.html
@@ -8,7 +8,7 @@
                 </span>
             </h5>
             <div class="d-flex justify-content-start">
-                <p class="card-text">AUD {{ product.price }}</p>
+                <p class="card-text">AUD {{ '%0.2f'|format(product.price|float) }}</p>
             </div>
             <hr>
             <div class="d-flex justify-content-between">
