--- a/app/templates/seller/product_table.html
+++ b/app/templates/seller/product_table.html
@@ -4,6 +4,7 @@
     </div>
     <div class="card-body">
         <div id="AlertModalDiv" class="hidden">
+            {% include "/layout/alert_modal.html" %}
         </div>
         <div class="row">
             <div class="col-md-12 d-flex justify-content-end mb-2">
